--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,48 @@
     margin: 0;
 
 }
+body {
+    background-color: rgb(209, 209, 206);
+}
+
 
 .img-thumbnail {
-    image-orientation: center;
-    height: 150px;
-    width: 150;
+    image-orientation: left;
+    height: 250px;
+    width: 250;
 
 }
 .mb-4{
     font-weight: bold;
 }
+p {
+    font-size: 16px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+hr.new4 {
+    border: 1px solid rgb(41, 40, 40);
+}
+
+    
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+  }
+  .fa:hover {
+    opacity: 0.7;
+  }
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+  .footer {
+    align-content: center;
+  }
 
